--- a/index.html
+++ b/index.html
@@ -11,7 +11,40 @@
     <body>
         <div class="container">
             <div class="display"></div>
-            <div class="buttons"></div>
+            <div class="buttons">
+                <div class="clear">
+                    <div class="reset">Clear</div>
+                    <div class="delete">Delete</div>
+                </div>
+
+                <div class="row">
+                    <div class="button">7</div>
+                    <div class="button">8</div>
+                    <div class="button">9</div>
+                    <div class="button">/</div>
+                </div>
+
+                <div class="row">
+                    <div class="button">4</div>
+                    <div class="button">5</div>
+                    <div class="button">6</div>
+                    <div class="button">x</div>
+                </div>
+
+                <div class="row">
+                    <div class="button">1</div>
+                    <div class="button">2</div>
+                    <div class="button">3</div>
+                    <div class="button">-</div>
+                </div>
+
+                <div class="row">
+                    <div class="button">0</div>
+                    <div class="button">.</div>
+                    <div class="button">=</div>
+                    <div class="button">+</div>
+                </div>
+            </div>
         </div>
     </body>
     <script src="main.js"></script>
