Complete calculator UI

--- a/index.html
+++ b/index.html
@@ -10,13 +10,16 @@
 
     <body>
         <div class="container">
-            <div class="display"></div>
+            <div class="display">
+                <div class="equation">123 + 123 = </div>
+                <div class="result">420</div>
+            </div>
             <div class="buttons">
                 <div class="clear">
                     <div class="reset">Clear</div>
                     <div class="delete">Delete</div>
                 </div>
-
+                
                 <div class="row">
                     <div class="button">7</div>
                     <div class="button">8</div>
@@ -44,6 +47,7 @@
                     <div class="button">=</div>
                     <div class="button">+</div>
                 </div>
+                
             </div>
         </div>
     </body>
