--- a/index.html
+++ b/index.html
@@ -21,31 +21,31 @@
                 </div>
                 
                 <div class="row">
-                    <div class="button">7</div>
-                    <div class="button">8</div>
-                    <div class="button">9</div>
-                    <div class="button">/</div>
+                    <div class="num">7</div>
+                    <div class="num">8</div>
+                    <div class="num">9</div>
+                    <div class="operator">/</div>
                 </div>
 
                 <div class="row">
-                    <div class="button">4</div>
-                    <div class="button">5</div>
-                    <div class="button">6</div>
-                    <div class="button">x</div>
+                    <div class="num">4</div>
+                    <div class="num">5</div>
+                    <div class="num">6</div>
+                    <div class="operator">x</div>
                 </div>
 
                 <div class="row">
-                    <div class="button">1</div>
-                    <div class="button">2</div>
-                    <div class="button">3</div>
-                    <div class="button">-</div>
+                    <div class="num">1</div>
+                    <div class="num">2</div>
+                    <div class="num">3</div>
+                    <div class="operator">-</div>
                 </div>
 
                 <div class="row">
-                    <div class="button">0</div>
-                    <div class="button">.</div>
-                    <div class="button">=</div>
-                    <div class="button">+</div>
+                    <div class="num">0</div>
+                    <div class="decimal">.</div>
+                    <div class="operator">=</div>
+                    <div class="operator">+</div>
                 </div>
                 
             </div>
