--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
     <body>
         <div class="container">
             <div class="display">
-                <div class="equation">123 + 123 = </div>
-                <div class="result">420</div>
+                <div class="equation"></div>
+                <div class="result"></div>
             </div>
             <div class="buttons">
                 <div class="clear">
@@ -44,7 +44,7 @@
                 <div class="row">
                     <div class="num">0</div>
                     <div class="decimal">.</div>
-                    <div class="operator">=</div>
+                    <div class="equal">=</div>
                     <div class="operator">+</div>
                 </div>
                 
